--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -57,3 +57,203 @@ body {
   width:300px;
   box-shadow:-1px 0px 8px rgba(0,0,0,.35);
 }
+
+/* components */
+.flex-row{
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+.flex-center{
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+.flex-col-1{
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+.flex-col-2{
+  -webkit-box-flex: 2;
+  -webkit-flex: 2;
+      -ms-flex: 2;
+          flex: 2;
+}
+.flex-col-3{
+  -webkit-box-flex: 3;
+  -webkit-flex: 3;
+      -ms-flex: 3;
+          flex: 3;
+}
+.flex-col-4{
+  -webkit-box-flex: 4;
+  -webkit-flex: 4;
+      -ms-flex: 4;
+          flex: 4;
+}
+.flex-col-5{
+  -webkit-box-flex: 5;
+  -webkit-flex: 5;
+      -ms-flex: 5;
+          flex: 5;
+}
+.flex-col-6{
+  -webkit-box-flex: 6;
+  -webkit-flex: 6;
+      -ms-flex: 6;
+          flex: 6;
+}
+.flex-col-7{
+  -webkit-box-flex: 7;
+  -webkit-flex: 7;
+      -ms-flex: 7;
+          flex: 7;
+}
+.flex-col-8{
+  -webkit-box-flex: 8;
+  -webkit-flex: 8;
+      -ms-flex: 8;
+          flex: 8;
+}
+.flex-col-9{
+  -webkit-box-flex: 9;
+  -webkit-flex: 9;
+      -ms-flex: 9;
+          flex: 9;
+}
+.flex-col-10{
+  -webkit-box-flex: 10;
+  -webkit-flex: 10;
+      -ms-flex: 10;
+          flex: 10;
+}
+.flex-col-11{
+  -webkit-box-flex: 11;
+  -webkit-flex: 11;
+      -ms-flex: 11;
+          flex: 11;
+}
+.flex-col-12{
+  -webkit-box-flex: 12;
+  -webkit-flex: 12;
+      -ms-flex: 12;
+          flex: 12;
+}
+.form-group-item{
+  margin: 10px 0;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+}
+.form-group-item .title,
+.form-group-item .sub-title,
+.form-group-item .suffix,
+.form-group-item input[type="text"],
+.form-group-item hr,
+.form-group-item textarea {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+.form-group-item .title,
+.form-group-item .sub-title,
+.form-group-item .suffix{
+  height: 25px;
+  line-height: 25px;
+  text-align: center;    
+}
+.form-group-item .title{
+  font-weight: bold;
+}
+.form-group-item input[type="text"]{
+  width: 100%;
+  height: 25px;
+  border: 1px solid #ccc;
+  padding: 2px 3px;
+  text-align: center;
+}
+.form-group-item .suffix{
+  margin-left: -5px;
+  text-align: center;
+  background-color: #eee;
+  border: 1px solid #ccc;
+  color: #777;
+}
+.form-group-item .btn{
+  text-align: center;
+}
+.form-group-item select,
+.form-group-item .ipt{
+  border: 1px solid #ccc;
+  margin-left: 5px;
+  padding: 0 4px;
+}
+.form-group-item textarea {
+  border: 1px solid #ccc;
+  padding: 4px 6px;
+  resize: vertical;
+  border-radius: 5px;
+  height: 50px;    
+}
+.form-group-item hr {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  border: 0;
+  border-top: 1px solid #ddd;
+  box-shadow: 0 0 8px rgba(0,0,0,.1);
+}
+.form-group-item .color-picker {
+  margin-left: 5px;
+  margin-top: 3px;
+}
+
+/* component tab */
+.panel-zone {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  overflow: hidden;
+  background-color: #f5f5f5;
+}
+.panel-zone .nav-tabs {
+  border-bottom: 1px solid #ddd;
+  background: #e8e8e8;
+}
+.panel-zone .nav-tabs > li.active > a,
+.panel-zone .nav-tabs > li.active > a:hover,
+.panel-zone .nav-tabs > li.active > a:focus {
+  color: #555;
+  cursor: default;
+  background-color: #f5f5f5;
+  border: 1px solid #ddd;
+  border-bottom-color: rgba(0, 0, 0, 0);
+}
+.panel-zone .panel-body {
+  padding: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+.panel-zone .panel-body .tab-content{
+  position: absolute;
+  top: 44px;
+  left: 5px;
+  right: 5px;
+  bottom: 5px;
+  overflow: hidden;
+}
+.panel-zone .panel-body .tab-content .tab-pane {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 45px;
+}
