增加 音乐表单 功能

--- a/index.ejs
+++ b/index.ejs
@@ -56,6 +56,7 @@ window.Global = {
 </script>
   <app></app>
   <script src="/static/vendors/jquery/jquery-1.11.2.js"></script>
+  <script src="/static/vendors/lodash/lodash.js"></script>
   <script src="/static/vendors/jquery-ui/jquery-ui.js"></script>
   <script src="/static/vendors/plupload/plupload.full.min.js"></script>
   <script src="/static/vendors/iscroll/iscroll.js"></script>
